    - Redesigned user interface
    - Added tracking of user favorites, recently played and most popular
      games.
    - Added virtual directories for selecting tracked games.
    - Added quick path navigation
    - Added navigation history
    - Added icons for files and directories.
    - Added option to show/hide file extensions.
    - Extended context menu and shortcuts.

  * Added option to toggle autofire mode.

  * Added another oddball TIA glitch option for score mode color.

-Have fun!


6.5.3 to 6.6 (November 16, 2021)

  * Added preliminary PlusROM support for saving high scores.

  * Added preliminary support for 'MVC' bankswitching scheme by
    Rob Bairos.

  * Added web links for many games.

  * Added dead zone and linearity settings for analog controllers.

  * Added 'Check for Update' button to Help dialog.

  * Added different mask patterns for scanline emulation.

  * Fixed MindLink controller.

  * Fixed SaveKey not working with QuadTari.

  * Added TIA randomization on startup option.

  * Added different debug color luminances for player and missile copies.

  * Added hotkeys for TV roll speed and toggling 'Developer settings' sets.

  * Debugger: enhanced prompt's auto complete and history.

  * Debugger: added optional logging of breaks and traps.

  * Debugger: added Thumb cycle counting.

6.5.2 to 6.5.3 (April 20, 2021)

  * Added context-sensitive help.

  * Improved support of multiple monitors with different resolutions.

  * Improved analog input reading (Paddles, Keyboards...).

  * Fixed QuadTari support for controller types other than Joysticks.

  * Fixed palette and TV effects saving for Retron77.

  * Fixed immediate disassembling when switching options in debugger.


6.5.1 to 6.5.2 (February 25, 2021)

  * Fixed broken Driving Controller support for Stelladaptor/2600-daptor
    devices.

  * Fixed missing QuadTari option in UI.

  * Improved QuadTari timing.

  * Added CPU usage stats to ARM cart classes debug widgets.

